[package]
name = "ebyte-e32"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "1.0.0"
snafu = { version = "0.7.0", features = [
    "rust_1_46",
], default-features = false }
typed-builder = "0.10.0"
smart-default = "0.6.0"
