[package]
name = "ebyte-e32"
version = "0.9.0"
edition = "2021"
description = "Platform-agnostic driver for Ebyte E32 LoRa modules"
license-file = "LICENSE"
repository = "https://github.com/barafael/ebyte-e32-rs"

[features]
value_enum = ["dep:clap", "snafu/std"]

[dev-dependencies]
embedded-hal-mock = "0.8.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[dependencies]
clap = { version = "3.2.23", features = ["derive"], optional = true }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
mutants = "0.0.3"
nb = "1.0.0"
snafu = { version = "0.7.3", features = [
    "rust_1_61",
], default-features = false }
typed-builder = "0.11.0"
